plugins {
    id 'java'
    id 'maven-publish'
}

sourceCompatibility = 1.11
targetCompatibility = 1.11

group 'honeyroasted.jype'
version '0.0.1'

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    implementation("com.github.dpaukov:combinatoricslib3:3.3.3")

    testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
}

task ghpagesJavadocs(type: Javadoc) {
    destinationDir = file("/docs")

    source = sourceSets.main.allJava
    classpath = configurations.runtimeClasspath
}

task fatJar(type: Jar) {
    from configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    with jar

    exclude("**/module-info.class")

    classifier("fat")
}

task javadocJar(type: Jar) {
    from javadoc

    classifier("javadoc")
}

task sourceJar(type: Jar) {
    from sourceSets.main.allSource

    classifier("source")
}

artifacts {
    archives javadocJar, fatJar, sourceJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = rootProject.name

            from components.java

            artifact sourceJar
            artifact javadocJar
            artifact fatJar
        }
    }
}

test {
    useJUnitPlatform()
}